@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.251 2005/04/29 14:40:25 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.252 2005/04/29 14:43:18 rocket Exp $
+
+  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
+  targets/support/livecdfs-update.sh:
+  Change default hostnames for livecds
 
   29 Apr 2005; Eric Edgar <rocket@gentoo.org>
   targets/support/bootloader-setup.sh, targets/support/livecdfs-update.sh:
